# msp432p401r-hal

./: Cargo.toml  LICENSE  README.md  openocd.cfg
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: rust.yml
examples/: hello_world.rs  i2c.rs  serial.rs  spi.rs  timer32.rs
src/: clock.rs  common.rs  cs.rs  flash.rs  flctl.rs  gpio.rs  lib.rs  pcm.rs  pmap.rs  spi.rs  time.rs  timer.rs  watchdog.rs
src/serial/: eusci.rs  i2c.rs  mod.rs  spi.rs  uart.rs
src/timer/: mod.rs  time.rs  timer16.rs  timer32.rs
