[package]
name = "msp432p401r-hal"
version = "0.1.0"
authors = ["Caio Tavares <caio.tavares11@gmail.com>", "José Cláudio S. Jr. <joseclaudio.silvajr@gmail.com>"]
description = "MSP432P401R Hardware Abstraction Layer"
keywords = ["msp432p401r", "arm", "hal", "cortex-m4"]
repository = "https://github.com/msp432-rust/msp432p401r-hal"
license-file = "LICENSE"
edition = "2018"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.11"
msp432p401r-pac = "0.1.0"
cortex-m-semihosting = "0.3.3"
embedded-hal = "1.0.0-alpha.4"
nb = "1.0.0"

[features]
rt = ["msp432p401r-pac/rt"]
