[package]
name = "msp432p401r-hal"
version = "0.2.0"
authors = ["Caio Tavares <caio.tavares11@gmail.com>", "José Cláudio S. Jr. <joseclaudio.silvajr@gmail.com>"]
description = "MSP432P401R Hardware Abstraction Layer"
keywords = ["msp432p401r", "arm", "hal", "cortex-m4"]
repository = "https://github.com/msp432-rust/msp432p401r-hal"
license-file = "LICENSE"
edition = "2018"

[dev-dependencies]
panic-halt = "0.2.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
msp432p401r-pac = "0.2.0"
cortex-m-semihosting = "0.3.3"
embedded-hal = "1.0.0-alpha.4"
nb = "1.0.0"

[features]
rt = ["msp432p401r-pac/rt"]
