[package]
name = "msp432p401r-hal"
version = "0.2.0"
authors = ["Caio Tavares <caio.tavares11@gmail.com>", "José Cláudio S. Jr. <joseclaudio.silvajr@gmail.com>"]
description = "MSP432P401R Hardware Abstraction Layer"
keywords = ["msp432p401r", "arm", "hal", "cortex-m4"]
repository = "https://github.com/msp432-rust/msp432p401r-hal"
license-file = "LICENSE"
edition = "2018"

[dev-dependencies]
panic-halt = "0.2.0"
irq = "0.2.3"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.13"
msp432p401r-pac = {version = "0.2.0", features = ["rt"]}
cortex-m-semihosting = "0.3.3"
embedded-hal = "1.0.0-alpha.5"
nb = "1.0.0"

[profile.dev]
debug = true
debug-assertions = true
opt-level = "s"

[profile.release]
opt-level = "s"
lto = true

[features]
rt = ["msp432p401r-pac/rt"]
